--- a/javahttp/src/main/res/layout/activity_main.xml
+++ b/javahttp/src/main/res/layout/activity_main.xml
@@ -36,7 +36,7 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="get"
+        android:text="get--获取字符串"
         android:onClick="getReq"
         android:textAllCaps="false"
         android:textSize="30dp"
@@ -45,7 +45,7 @@
         android:id="@+id/post"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="post"
+        android:text="post--获取字符串"
         android:onClick="postReq"
         android:textSize="30dp"
         android:textAllCaps="false"
@@ -54,7 +54,7 @@
         android:id="@+id/getImg"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="getImg"
+        android:text="获取图片"
         android:onClick="getImageReq"
         android:textSize="30dp"
         android:textAllCaps="false"
