--- a/androidhttpclient/src/main/res/layout/activity_main.xml
+++ b/androidhttpclient/src/main/res/layout/activity_main.xml
@@ -22,11 +22,26 @@
         android:textAllCaps="false"
         android:textSize="30dp"
         />
+
+    <Button
+        android:id="@+id/getImg"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="获取图片"
+        android:textAllCaps="false"
+        android:textSize="30dp"
+        />
+
+    <ImageView
+        android:id="@+id/image"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        />
     <TextView
         android:id="@+id/result"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="30dp"
-        android:text="Hello World!" />
+        android:text="" />
 
 </LinearLayout>
